--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -32,7 +32,7 @@ jobs:
          aws-secret-access-key: ${{ secrets.AWS_SECRET_KEY }}
          aws-region: us-east-1
 
-     - name: Update and adding new files (if added) to S3 bucket
-       run: aws s3 sync . s3://vuejs-app-bucket-cicd
-     - name: Deleting files (if deleted) to S3 bucket
-       run: aws s3 sync . s3://vuejs-app-bucket-cicd --delete
+     - name: Deploy to S3 bucket
+       run: aws s3 sync ./dist s3://vuejs-app-bucket-cicd
+    #  - name: Deleting files (if deleted) to S3 bucket
+    #    run: aws s3 sync . s3://vuejs-app-bucket-cicd --delete
